# codescythe

./: .bazelrc  .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  NOTICE  README.md  REPO.bazel  cliff.toml  codescythe.schema.json  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: cli-release.yml  crates-release.yml  npm-release.yml  pages.yml  release-please.yml  test-functional.yml  test-native.yml  test-npm.yml  test.yml  verify-hooks.yml
benchmarks/: BUILD.bazel  README.md  fixture_tests.bzl  grafana_conformance.snapshot.json  kibana_conformance.snapshot.json  kibana_conformance.ts  renovate_conformance.snapshot.json  run.ts  vscode_conformance.snapshot.json
crates/codescythe/: BUILD.bazel  Cargo.toml  analyze.rs  codescythe.schema.json  config.rs  fix.rs  lib.rs
crates/codescythe/analyze/: discovery.rs  doctor.rs  explain.rs  graph.rs  parse.rs  profile.rs  query.rs  resolver.rs  tests.rs  util.rs
crates/codescythe/src/: analyze.rs  config.rs  lib.rs
crates/codescythe_cli/: BUILD.bazel  Cargo.toml  e2e.rs  main.rs  release_binary.bzl
crates/codescythe_cli/src/: main.rs
crates/codescythe_napi/: BUILD.bazel  Cargo.toml  lib.rs  release_node.bzl
docs/: .nojekyll  BUILD.bazel  index.html  styles.css
docs/src/: deploy.ts  localdev.ts  render.ts  site.css
npm/codescythe/: README.md  index.js  package.json
npm/codescythe-darwin-arm64/: BUILD.bazel
npm/codescythe-linux-arm64-gnu/: BUILD.bazel  README.md  index.js  package.json
npm/codescythe-linux-x64-gnu/: BUILD.bazel  README.md  index.js  package.json
tests/bazel/: BUILD.bazel  codescythe_test.bzl  codescythe_test_runner.rs
tests/fixtures/agi-runfiles/: README.md  codescythe.json  package.json
tests/fixtures/agi-runfiles/pplx/frontend/apps/ask/perplexity-windows/: index.html  nativeNetworkFetcher.ts
tests/fixtures/cli-fix-output/: clean.stdout  unresolved.stdout
tests/fixtures/cli-verbose-output/: analysis.snapshot.json  diagnostics.stderr  fix.diagnostics.stderr  fix.snapshot.json
tests/fixtures/false-positive-repros/: BUILD.bazel  SYNOPSIS.md
tests/fixtures/false-positive-repros/commonjs_require/: codescythe.json  index.js  make-value.js
tests/fixtures/false-positive-repros/dynamic_import_destructuring/: codescythe.json  index.ts  lazy.ts
tests/fixtures/false-positive-repros/import_meta_glob/: index.ts
tests/fixtures/false-positive-repros/import_meta_glob/routes/: home.ts
tests/fixtures/false-positive-repros/test_helper_imports/: billing.test.ts  billing.ts  factory.ts  index.ts
tests/fixtures/knip-export-basics/: BUILD.bazel  README.md  codescythe.json  index.ts  types.ts
tests/fixtures/oxc-resolution/: README.md  codescythe.json  package.json
tests/fixtures/oxc-resolution/app/: aliased.ts  dead.ts  extension.ts  index.ts  internal.ts
tests/fixtures/runfiles-false-positive/: BUILD.bazel  codescythe.json  package.json
tests/fixtures/runfiles-false-positive/src/: main.ts
tests/fixtures/runfiles-fixture/: BUILD.bazel  README.md  codescythe.json  package.json
tests/fixtures/runfiles-fixture/protobuf/wrong/: client.ts
tests/fixtures/runfiles-fixture/typespec/: schema.ts
tests/fixtures/runfiles-fixture/workspace/frontend/: dead.ts
tests/fixtures/runfiles-fixture/workspace/frontend/apps/client/platform/: index.html  platformRuntime.ts
tests/fixtures/runfiles-fixture/workspace/frontend/apps/client/spa/: index.html
tests/fixtures/runfiles-fixture/workspace/frontend/lib/: runtime.ts
tests/fixtures/test-file-usage/: analysis.snapshot.json  codescythe.json  fix.snapshot.json
tests/fixtures/test-file-usage/src/: dead-wrapper.spec.ts  dead.test.ts  live.test.ts  live.ts  main.ts  module.spec.ts  module.ts  namespace.test.ts  namespace.ts  types.test.ts  types.ts
tools/: BUILD.bazel  prepare_npm_publish_artifacts.ts  smoke_napi_package.js  ts.bzl  verify-pr-title.ts
