[workspace]
members = [
  "crates/codescythe",
  "crates/codescythe_cli",
  "crates/codescythe_napi",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/perplexityai/codescythe"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
globset = "0.4"
jsonschema = { version = "0.46.5", default-features = false }
napi = { version = "3.8.6", default-features = false, features = ["napi4"] }
napi-derive = "3.5"
oxc = { version = "0.126", features = ["ast_visit"] }
oxc_allocator = "0.126"
oxc_ast = "0.126"
oxc_parser = "0.126"
oxc_resolver = "11.19.1"
oxc_span = "0.126"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.23"
thiserror = "2.0"
walkdir = "2.5"
