[workspace]
members = [
  "crates/codescythe",
  "crates/codescythe_cli",
  "crates/codescythe_napi",
]
resolver = "3"

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/perplexityai/codescythe"
rust-version = "1.93"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive", "env"] }
globset = { version = "0.4.18" }
ignore = { version = "0.4.25" }
jsonschema = { version = "0.46.5", default-features = false }
jsonc-parser = { version = "0.32.4", features = ["serde"] }
napi = { version = "3.9.0", default-features = false, features = ["napi4"] }
napi-derive = { version = "3.5.6" }
oxc = { version = "0.132.0", features = ["ast_visit"] }
oxc_allocator = { version = "0.132.0" }
oxc_ast = { version = "0.132.0" }
oxc_parser = { version = "0.132.0" }
oxc_resolver = { version = "11.19.1" }
oxc_span = { version = "0.132.0" }
rayon = { version = "1.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tempfile = { version = "3.27.0" }
thiserror = { version = "2.0.18" }
walkdir = { version = "2.5.0" }
