module(
    name = "codescythe",
    version = "0.1.0",
    bazel_compatibility = [">=8.5.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_cc", version = "0.2.18")

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "gazelle_ts", version = "0.4.18")

bazel_dep(name = "aspect_rules_js", version = "3.1.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

bazel_dep(name = "rules_rs", version = "0.0.82")
bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "with_cfg.bzl", version = "0.14.6")

benchmark_fixture_build_file = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)
"""

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "benchmark_vscode",
    build_file_content = benchmark_fixture_build_file,
    sha256 = "2a13c215a62ef6a6858ce5d144e8956e847123151d0440185a5a1191c407d6bb",
    strip_prefix = "vscode-9b7643f90393b9ad2c5d5cbbdad70fa928090009",
    urls = [
        "https://github.com/microsoft/vscode/archive/9b7643f90393b9ad2c5d5cbbdad70fa928090009.tar.gz",
    ],
)

http_archive(
    name = "benchmark_grafana",
    build_file_content = benchmark_fixture_build_file,
    sha256 = "1f8c2e414dc367cd687dc6e9edb6697753000a2a9b0065e345bc88e21b591e7c",
    strip_prefix = "grafana-7709dc39cf8ee2de85c38b8943b208adf8a3c47c",
    urls = [
        "https://github.com/grafana/grafana/archive/7709dc39cf8ee2de85c38b8943b208adf8a3c47c.tar.gz",
    ],
)

http_archive(
    name = "benchmark_kibana",
    build_file_content = benchmark_fixture_build_file,
    sha256 = "e620e9505e6c035a24bd16e1b6ee4c6e7abd6a26d1d74ef665684927f3d6b2c8",
    strip_prefix = "kibana-d706f62a04af1112db6b4dfef3c94955bdb98250",
    urls = [
        "https://github.com/elastic/kibana/archive/d706f62a04af1112db6b4dfef3c94955bdb98250.tar.gz",
    ],
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "24.14.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.33.4",
)
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

llvm_toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
use_repo(llvm_toolchain, "llvm_toolchains")
register_toolchains("@llvm_toolchains//:all")

rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.95.0",
)
use_repo(toolchains, "default_rust_toolchains")
register_toolchains("@default_rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
)
use_repo(crate, "crates")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")
