load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load(":fixture_tests.bzl", "fixture_functional_test")

package(default_visibility = ["//visibility:public"])

fixture_functional_test(
    name = "vscode_fixture_test",
    fixture = "vscode",
    fixture_repo = "@benchmark_vscode",
)

fixture_functional_test(
    name = "grafana_fixture_test",
    fixture = "grafana",
    fixture_repo = "@benchmark_grafana",
)

fixture_functional_test(
    name = "kibana_fixture_test",
    fixture = "kibana",
    fixture_repo = "@benchmark_kibana",
)

fixture_functional_test(
    name = "renovate_fixture_test",
    fixture = "renovate",
    fixture_repo = "@benchmark_renovate",
)

js_binary(
    name = "kibana_conformance_snapshot_bin",
    data = [
        "//:node_modules/knip",
        "//crates/codescythe_cli:codescythe",
        "@benchmark_kibana//:all_files",
        "@benchmark_kibana//:package_json",
    ],
    copy_data_to_bin = False,
    entry_point = "kibana_conformance.ts",
    node_options = ["--experimental-transform-types"],
)

js_run_binary(
    name = "kibana_conformance_snapshot",
    args = [
        "--codescythe-bin",
        "$(location //crates/codescythe_cli:codescythe)",
        "--fixture-package-json",
        "$(location @benchmark_kibana//:package_json)",
        "--fuzz-files",
        "16",
        "--fuzz-exports",
        "8",
        "--skip-build",
        "--snapshot-output",
        "$(location kibana_conformance.snapshot.generated.json)",
    ],
    outs = ["kibana_conformance.snapshot.generated.json"],
    copy_srcs_to_bin = False,
    use_execroot_entry_point = False,
    srcs = [
        "//crates/codescythe_cli:codescythe",
        "@benchmark_kibana//:all_files",
        "@benchmark_kibana//:package_json",
    ],
    tool = ":kibana_conformance_snapshot_bin",
)

write_source_file(
    name = "kibana_conformance",
    in_file = ":kibana_conformance_snapshot",
    out_file = "kibana_conformance.snapshot.json",
    diff_test_failure_message = "{{DEFAULT_MESSAGE}}\n\nThe Kibana conformance snapshot changed. Review the generated JSON, then run:\n\n    bazel run //benchmarks:kibana_conformance\n",
    tags = ["functional_test"],
)
