load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")

package(default_visibility = ["//visibility:public"])

DOCS_TOOL_DATA = [
    "src/assets/codescythe-logo.png",
    "src/deploy.ts",
    "src/localdev.ts",
    "src/render.ts",
    "src/site.css",
    "//:node_modules/open-props",
    "//:node_modules/react",
    "//:node_modules/react-dom",
] + glob(["src/assets/query/*.svg"])

js_binary(
    name = "render_docs",
    data = DOCS_TOOL_DATA,
    entry_point = "src/render.ts",
    node_options = ["--experimental-transform-types"],
)

js_run_binary(
    name = "build",
    args = [
        "--out-dir",
        "docs/public",
        "--quiet",
    ],
    out_dirs = ["public"],
    tool = ":render_docs",
)

js_binary(
    name = "localdev",
    data = DOCS_TOOL_DATA,
    entry_point = "src/localdev.ts",
    node_options = ["--experimental-transform-types"],
)

js_binary(
    name = "deploy",
    data = DOCS_TOOL_DATA,
    entry_point = "src/deploy.ts",
    node_options = ["--experimental-transform-types"],
)
