load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

COMMON_DEPS = [
    "@crates//:anyhow",
    "@crates//:globset",
    "@crates//:ignore",
    "@crates//:jsonschema",
    "@crates//:jsonc-parser",
    "@crates//:oxc",
    "@crates//:oxc_allocator",
    "@crates//:oxc_ast",
    "@crates//:oxc_parser",
    "@crates//:oxc_resolver",
    "@crates//:oxc_span",
    "@crates//:rayon",
    "@crates//:serde",
    "@crates//:serde_json",
    "@crates//:thiserror",
    "@crates//:walkdir",
]

rust_library(
    name = "codescythe",
    srcs = [
        "analyze/discovery.rs",
        "analyze/doctor.rs",
        "analyze/explain.rs",
        "analyze/graph.rs",
        "analyze/parse.rs",
        "analyze/resolver.rs",
        "analyze/tests.rs",
        "analyze/util.rs",
        "analyze.rs",
        "config.rs",
        "fix.rs",
        "lib.rs",
    ],
    compile_data = ["//:config_schema"],
    crate_name = "codescythe",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = COMMON_DEPS,
)

rust_test(
    name = "codescythe_test",
    crate = ":codescythe",
    data = [
        "//tests/fixtures/knip-export-basics:fixtures",
        "//tests/fixtures/oxc-resolution:fixtures",
    ],
    deps = COMMON_DEPS + [
        "@crates//:tempfile",
    ],
)
