[package]
name = "codescythe"
version = "0.4.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Focused TypeScript dead-code analysis and removal core"

[lib]
path = "lib.rs"

[features]
default = []
profiling = []

[dependencies]
anyhow.workspace = true
globset.workspace = true
ignore.workspace = true
jsonschema.workspace = true
jsonc-parser.workspace = true
oxc.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_resolver.workspace = true
oxc_span.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
