load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load(
    ":release_binary.bzl",
    "release_binary_darwin_arm64",
    "release_binary_linux_amd64",
    "release_binary_linux_arm64",
)

VERSION = "0.4.15"  # x-release-please-version

rust_binary(
    name = "codescythe",
    srcs = ["main.rs"],
    crate_name = "codescythe",
    edition = "2024",
    version = VERSION,
    visibility = ["//visibility:public"],
    deps = [
        "//crates/codescythe",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:serde_json",
    ],
)

rust_binary(
    name = "codescythe_profiling",
    srcs = ["main.rs"],
    crate_features = ["profiling"],
    crate_name = "codescythe",
    edition = "2024",
    version = VERSION,
    visibility = ["//visibility:public"],
    deps = [
        "//crates/codescythe:codescythe_profiling",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "codescythe_cli_test",
    srcs = ["main.rs"],
    crate_name = "codescythe_cli_test",
    edition = "2024",
    version = VERSION,
    deps = [
        "//crates/codescythe",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "codescythe_cli_e2e_test",
    srcs = ["e2e.rs"],
    crate_name = "codescythe_cli_e2e_test",
    data = [
        ":codescythe",
        ":codescythe_profiling",
        "//tests/fixtures/cli-fix-output:fixtures",
        "//tests/fixtures/cli-verbose-output:fixtures",
        "//tests/fixtures/oxc-resolution:fixtures",
        "//tests/fixtures/test-file-usage:fixtures",
    ],
    edition = "2024",
    deps = [
        "@crates//:serde_json",
    ],
)

release_binary_linux_amd64(
    name = "release_binary_linux_amd64",
    srcs = [":codescythe"],
    outs = ["codescythe-linux-amd64"],
    cmd = "cp $< $@ && chmod +x $@",
    visibility = ["//visibility:public"],
)

release_binary_linux_arm64(
    name = "release_binary_linux_arm64",
    srcs = [":codescythe"],
    outs = ["codescythe-linux-arm64"],
    cmd = "cp $< $@ && chmod +x $@",
    visibility = ["//visibility:public"],
)

release_binary_darwin_arm64(
    name = "release_binary_darwin_arm64",
    srcs = [":codescythe"],
    outs = ["codescythe-darwin-arm64"],
    cmd = "cp $< $@ && chmod +x $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "release_binaries",
    srcs = [
        ":release_binary_darwin_arm64",
        ":release_binary_linux_amd64",
        ":release_binary_linux_arm64",
    ],
    visibility = ["//visibility:public"],
)
