[package]
name = "codescythe_cli"
version = "0.4.13-e2e.20260526.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Codescythe command-line interface"

[[bin]]
name = "codescythe"
path = "main.rs"

[features]
default = []
profiling = ["codescythe/profiling"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
codescythe = { path = "../codescythe" }
serde_json.workspace = true
