load("@rules_rs//rs:rust_shared_library.bzl", "rust_shared_library")
load(
    ":release_node.bzl",
    "release_node_darwin_arm64",
    "release_node_linux_amd64",
    "release_node_linux_arm64",
)

rust_shared_library(
    name = "codescythe_napi",
    srcs = ["lib.rs"],
    crate_name = "codescythe_napi",
    edition = "2024",
    proc_macro_deps = [
        "@crates//:napi-derive",
    ],
    rustc_flags = select({
        "@platforms//os:macos": [
            "-Clink-arg=-Wl,-undefined,dynamic_lookup",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/codescythe",
        "@crates//:anyhow",
        "@crates//:napi",
        "@crates//:serde_json",
    ],
)

release_node_linux_amd64(
    name = "release_node_linux_amd64",
    srcs = [":codescythe_napi"],
    outs = ["codescythe.linux-amd64.node"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

release_node_linux_arm64(
    name = "release_node_linux_arm64",
    srcs = [":codescythe_napi"],
    outs = ["codescythe.linux-arm64.node"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

release_node_darwin_arm64(
    name = "release_node_darwin_arm64",
    srcs = [":codescythe_napi"],
    outs = ["codescythe.darwin-arm64.node"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "release_nodes",
    srcs = [
        ":release_node_darwin_arm64",
        ":release_node_linux_amd64",
        ":release_node_linux_arm64",
    ],
    visibility = ["//visibility:public"],
)
