load("//tests/bazel:codescythe_test.bzl", "codescythe_test", "source_group")

source_group(
    name = "commonjs_require_sources",
    srcs = [
        "commonjs_require/index.js",
        "commonjs_require/make-value.js",
    ],
)

codescythe_test(
    name = "commonjs_require_false_positive_repro",
    config = "commonjs_require/codescythe.json",
    expected_exit_code = 0,
    must_not_contain = ["make-value.js"],
    targets = [":commonjs_require_sources"],
)

source_group(
    name = "dynamic_import_destructuring_sources",
    srcs = [
        "dynamic_import_destructuring/index.ts",
        "dynamic_import_destructuring/lazy.ts",
    ],
)

codescythe_test(
    name = "dynamic_import_destructuring_false_positive_repro",
    config = "dynamic_import_destructuring/codescythe.json",
    expected_exit_code = 0,
    must_not_contain = ["lazyValue"],
    targets = [":dynamic_import_destructuring_sources"],
)

source_group(
    name = "import_meta_glob_sources",
    srcs = [
        "import_meta_glob/index.ts",
        "import_meta_glob/routes/home.ts",
    ],
)

codescythe_test(
    name = "import_meta_glob_false_positive_repro",
    config = "import_meta_glob/codescythe.json",
    expected_exit_code = 0,
    must_not_contain = ["routes/home.ts"],
    targets = [":import_meta_glob_sources"],
)

test_suite(
    name = "false_positive_repros",
    tests = [
        ":commonjs_require_false_positive_repro",
        ":dynamic_import_destructuring_false_positive_repro",
        ":import_meta_glob_false_positive_repro",
    ],
)
