load("//tests/bazel:codescythe_test.bzl", "codescythe_test")

filegroup(
    name = "commonjs_require_files",
    srcs = glob(["commonjs_require/**"]),
)

codescythe_test(
    name = "commonjs_require_false_positive_repro",
    args = [
        "--config",
        "$(location commonjs_require/codescythe.json)",
        "--directory",
        "commonjs_require",
        "--json",
    ],
    data = [
        ":commonjs_require_files",
        "commonjs_require/codescythe.json",
    ],
    expected_exit_code = 0,
    must_not_contain = ["make-value.js"],
)

filegroup(
    name = "dynamic_import_destructuring_files",
    srcs = glob(["dynamic_import_destructuring/**"]),
)

codescythe_test(
    name = "dynamic_import_destructuring_false_positive_repro",
    args = [
        "--config",
        "$(location dynamic_import_destructuring/codescythe.json)",
        "--json",
    ],
    data = [
        ":dynamic_import_destructuring_files",
        "dynamic_import_destructuring/codescythe.json",
    ],
    expected_exit_code = 0,
    must_not_contain = ["lazyValue"],
)

filegroup(
    name = "import_meta_glob_files",
    srcs = glob(["import_meta_glob/**"]),
)

codescythe_test(
    name = "import_meta_glob_false_positive_repro",
    args = [
        "--config",
        "$(location import_meta_glob/codescythe.json)",
        "--json",
    ],
    data = [
        ":import_meta_glob_files",
        "import_meta_glob/codescythe.json",
    ],
    expected_exit_code = 0,
    must_not_contain = ["routes/home.ts"],
)

filegroup(
    name = "test_helper_imports_files",
    srcs = glob(["test_helper_imports/**"]),
)

codescythe_test(
    name = "test_helper_imports_false_positive_repro",
    args = [
        "--config",
        "$(location test_helper_imports/codescythe.json)",
        "--json",
    ],
    data = [
        ":test_helper_imports_files",
        "test_helper_imports/codescythe.json",
    ],
    expected_exit_code = 0,
    must_not_contain = ["factory.ts"],
)

test_suite(
    name = "false_positive_repros",
    tests = [
        ":commonjs_require_false_positive_repro",
        ":dynamic_import_destructuring_false_positive_repro",
        ":import_meta_glob_false_positive_repro",
        ":test_helper_imports_false_positive_repro",
    ],
)
