load("//tests/bazel:codescythe_test.bzl", "codescythe_test")

filegroup(
    name = "fixture_files",
    srcs = glob(
        ["**"],
        exclude = ["BUILD.bazel"],
    ),
)

codescythe_test(
    name = "codescythe_false_positive_test",
    args = [
        "--config",
        "$(location codescythe.json)",
        "--json",
    ],
    data = [
        ":fixture_files",
        "codescythe.json",
    ],
    expected_exit_code = 0,
    must_contain = [
        "\"processed\":3",
        "\"total\":3",
    ],
    must_not_contain = [
        "#virtual_generated/api/foo",
    ],
)
